added module files

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':SmartBrainHome'
 include ':SmartBrainGuessCharacters'
 include ':SmartBrainFindSimilarPieces'
 include ':SmartBrainTheMaze'
+include ':SmartBrainDatabase'
