--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
@@ -40,4 +42,19 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    implementation "io.insert-koin:koin-android:3.2.0"
+
+
+    implementation project(':SmartBrainAuthentication')
+    implementation project(':SmartBrainComponents')
+    implementation project(':SmartBrainDatabase')
+    implementation project(':SmartBrainFindSimilarPieces')
+    implementation project(':SmartBrainGuessCharacters')
+    implementation project(':SmartBrainHome')
+    implementation project(':SmartBrainNavigation')
+    implementation project(':SmartBrainSplash')
+    implementation project(':SmartBrainTheMaze')
+
 }
