configure modules vol3

--- a/SmartBrainAuthentication/build.gradle
+++ b/SmartBrainAuthentication/build.gradle
@@ -47,4 +47,5 @@ dependencies {
 
     implementation project(':SmartBrainComponents')
     implementation project(':SmartBrainNavigation')
+    implementation project(':SmartBrainHome')
 }
