--- a/SmartBrainDatabase/build.gradle
+++ b/SmartBrainDatabase/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Koin
-    implementation "io.insert-koin:koin-android-compat:3.2.0"
+    implementation "io.insert-koin:koin-android:3.2.0"
 
     //Room
     implementation "androidx.room:room-runtime:2.4.3"
