--- a/SmartBrainHome/build.gradle
+++ b/SmartBrainHome/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "io.insert-koin:koin-android-compat:3.2.0"
+    implementation "io.insert-koin:koin-android:3.2.0"
 
     implementation project(':SmartBrainNavigation')
     implementation project(':SmartBrainComponents')
