--- a/SmartBrainComponents/build.gradle
+++ b/SmartBrainComponents/build.gradle
@@ -1,63 +1,21 @@
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'GradlePluginConfig'
 
-android {
-    compileSdk 32
-
-    defaultConfig {
-        minSdk 21
-        targetSdk 32
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures{
-        viewBinding true
-    }
-}
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //Koin
-    implementation "io.insert-koin:koin-android:3.2.0"
-
-
-    //Datastore
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-
-    //Lifecycle
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1"
-
-    //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
+    implementation SupportLibraries.Ktx
+    implementation SupportLibraries.AppCompat
+    implementation SupportLibraries.Material
+    implementation SupportLibraries.Constraint
+    testImplementation TestLibraries.Junit
+    androidTestImplementation TestLibraries.TestRunner
+    androidTestImplementation TestLibraries.Espresso
+    api Coroutines.Core
+    api Coroutines.Android
+    api Lifecycle.ViewModel
+    api Lifecycle.Extension
+    api Lifecycle.LiveData
+    api Libraries.Datastore
 
     implementation project(":SmartBrainNavigation")
 }
