--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,12 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'GradlePluginConfig'
 
 android {
-    compileSdk 32
-
     defaultConfig {
         applicationId "com.example.smartbrain"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -22,29 +16,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures{
-        viewBinding true
-    }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
-    implementation "io.insert-koin:koin-android:3.2.0"
+    implementation SupportLibraries.Ktx
+    implementation SupportLibraries.AppCompat
+    implementation SupportLibraries.Material
+    implementation SupportLibraries.Constraint
+    testImplementation TestLibraries.Junit
+    androidTestImplementation TestLibraries.TestRunner
+    androidTestImplementation TestLibraries.Espresso
+    api Coroutines.Core
+    api Coroutines.Android
+    api Lifecycle.ViewModel
+    api Lifecycle.Extension
+    api Lifecycle.LiveData
 
     implementation project(':SmartBrainAuthentication')
     implementation project(':SmartBrainComponents')
